--- a/_config.yml
+++ b/_config.yml
@@ -1,27 +1,29 @@
 # Permalinks
-permalink:           pretty
+permalink: pretty
 
 # Setup
-title:               Tiago Donato
-# tagline:             The Jekyll Butler
-url:                 https://tgdnt.com
-paginate:            1
-baseurl:             ""
+title: Tiago Donato
+# tagline:
+url: https://tgdnt.com
+paginate: 1
+baseurl: ""
+repo_name: tgdnt/tgdnt.com
 
 # Assets
 #
 # We specify the directory for Jekyll so we can use @imports.
 sass:
-  sass_dir:          _sass
-  style:            :compressed
+  sass_dir: _sass
+  style: :compressed
 
 # About/contact
 author:
-  name:              Tiago Donato
-  url:               https://tgdnt.com
-  email:             tgdnt@pm.me
+  name: Tiago Donato
+  url: https://tgdnt.com
+  email: tgdnt@pm.me
 
 # Gems
 gems:
   - jekyll-paginate
   - jekyll-gist
+  - jekyll-org
