Implements social links and avatar in home page
* Adds avatar and social-links in config.yml
* Removes jekyll-org plugin
* Adds includes for social links and svg icons
* Removes animated CSS class
* Fixes up scss syntax in _homepage.scss
* Adds _social-links.scss
* Adds dynamic avatar and includes calls to index.html
* Imports social-links stylesheet into styles.scss

--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,13 @@ paginate: 1
 baseurl: ""
 repo_name: tgdnt/tgdnt.com
 
+# Social links:
+github: tgdnt
+email: tgdnt@pm.me
+
+avatar:
+  alt: "Tiago Donato"
+  url: public/avatar.jpg
 # Assets
 #
 # We specify the directory for Jekyll so we can use @imports.
@@ -26,4 +33,4 @@ author:
 plugins:
   - jekyll-paginate
   - jekyll-gist
-  - jekyll-org
+#  - jekyll-org
