--- a/_config.yml
+++ b/_config.yml
@@ -5,10 +5,11 @@ permalink: pretty
 title: Tiago Donato
 # tagline:
 url: https://tgdnt.com
-paginate: 1
-paginate_path: "/blog/page:num/"
 baseurl: ""
 repo_name: tgdnt/tgdnt.com
+paginate: 1
+paginate_path: "/blog/page:num/"
+excerpt_separator: <!--more-->
 
 # Social links:
 github: tgdnt
