--- a/_config.yml
+++ b/_config.yml
@@ -6,11 +6,11 @@ title: Tiago Donato
 url: https://tgdnt.com
 baseurl: ""
 repo_name: tgdnt/tgdnt.com
-#nav:
-#  - title: Casa
-#    url: /index.html
-#  - title: Blog
-#    url: /blog
+nav:
+  - title: Home
+    url: /
+  - title: Blog
+    url: /blog
 paginate: 1
 paginate_path: "/blog/page:num/"
 excerpt_separator: <!--more-->
