--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ email: tgdnt@pm.me
 
 avatar:
   alt: "Tiago Donato"
-  url: public/avatar.jpg
+  url: assets/images/avatar.jpg
 ## Assets
 #
 # We specify the directory for Jekyll so we can use @imports.
