--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ nav:
 paginate: 1
 paginate_path: "/blog/page:num/"
 excerpt_separator: <!--more-->
+exclude: ["/.orgsource"]
 defaults:
   -
     scope:
