Adds jekyll-feed and others
* Removes atom.xml file, which will be generated
* Also adds jekyll-seo-tag and jekyll-archives for later

--- a/_config.yml
+++ b/_config.yml
@@ -53,4 +53,6 @@ author:
 plugins:
   - jekyll-paginate
   - jekyll-gist
-#  - jekyll-org
+  - jekyll-feed
+#  - jekyll-seo-tag
+#  - jekyll-archives
