--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule ".orgsource"]
-	path = .orgsource
-	url = ./.orgsource
+[submodule "_orgsource"]
+	path = _orgsource
+	url = ./_orgsource
