Adds mastodon icon to social links
* Also tweaks positioning of certain icons
  for better alignment

--- a/_config.yml
+++ b/_config.yml
@@ -51,6 +51,7 @@ github: tgdnt
 # medium: medium
 # vimeo: tiagodonato
 # lanyrd: mylanyrd
+mastodon: masto.donte.com.br/@tgdnt
 email: tgdnt@pm.me
 
 avatar:
