Adds keybase social icon

--- a/_config.yml
+++ b/_config.yml
@@ -51,6 +51,7 @@ github: tgdnt
 # vimeo: tiagodonato
 # lanyrd: mylanyrd
 mastodon: masto.donte.com.br/@tgdnt
+keybase: tgdnt
 email: tiago@tgdnt.com
 
 comment_to_email: tiago@tgdnt.com
