--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ defaults:
     values:
       layout: "post"
       author: "Tiago Donato"
+      license: "CC-BY-SA"
 
 ## Social links:
 # facebook: myfacebook
