--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ nav:
     url: /blog
 paginate: 3
 paginate_path: "/blog/page:num/"
-exclude: ["/_orgsource"]
+exclude: ["_orgsource", vendor]
 no_related_posts: true
 
 defaults:
