.travis.yml housekeeping

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,15 @@ language: ruby
 addons:
   homebrew:
     packages:
-    - pandoc
-    - awscli
+      - pandoc
+      - awscli
 rvm:
-- 2.5.3
+  - 2.5.3
 script:
-- "./.org-jekyll.sh build"
-- "./.deploy.sh"
+  - "./.org-jekyll.sh build"
+  - "./.deploy.sh"
 branches:
   only:
   - master
-cache: bundler
+cache:
+  - bundler
