Improvements and fixes to asides styles
* Corrects font color for code and a
* Removes unnecessary styles
* Darkens aside font color overall
* Corrects other style changes caused by this change
* Changes site.url to add the www. subdomain

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ permalink: /:slug/
 
 ## Setup
 title: Tiago Donato
-url: https://tgdnt.com
+url: https://www.tgdnt.com
 baseurl: ""
 timezone: America/Chicago
 
